# ideeza-analytics-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  gunicorn.config.py  pyproject.toml
config/: urls.py
config/django/: base.py
config/settings/debug_toolbar/: settings.py  setup.py
core/analytics/: admin.py  apis.py  apps.py  filters.py  selectors.py  urls.py
core/analytics/fixtures/blog/: blog.yaml
core/analytics/fixtures/blogview/: blogview.yaml
core/analytics/fixtures/country/: country.yaml
core/analytics/migrations/: 0001_initial.py  0002_initial.py  0003_blogview_analytics_b_viewer__c5f61c_idx_and_more.py
core/analytics/models/: __init__.py  blog.py  blogview.py  country.py
core/api/: urls.py
core/users/: models.py
core/users/fixtures/user/: baseuser.yaml  user.yaml
core/users/migrations/: 0001_initial.py
docker/development/: Dockerfile  docker-compose.yml  entrypoint.sh  gunicorn.config.py
docker/production/: docker-compose.yml
scripts/: install.sh
